--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,21 @@
 asgiref==3.8.1
 backports.zoneinfo==0.2.1
+certifi==2025.1.31
+charset-normalizer==3.4.1
 Django==4.2.18
+django-cors-headers==4.4.0
 djangorestframework==3.15.2
 et-xmlfile==2.0.0
+idna==3.10
 numpy==1.24.4
 openpyxl==3.1.5
 pandas==2.0.3
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.2
+requests==2.32.3
 six==1.17.0
 sqlparse==0.5.3
 typing-extensions==4.12.2
 tzdata==2025.1
+urllib3==2.2.3
